--- a/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
+++ b/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
@@ -10,16 +10,25 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Testing\History\Binance_ADAUSDT_minute.csv" />
       <Content Include="Testing\History\Binance_ADAUSDT_minute.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
-      <None Remove="Testing\History\Binance_BNBUSDT_minute.csv" />
       <Content Include="Testing\History\Binance_BNBUSDT_minute.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
-      <None Remove="Testing\History\Binance_BTCUSDT_minute.csv" />
       <Content Include="Testing\History\Binance_BTCUSDT_minute.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Testing\History\Binance_ETHUSDT_minute.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Testing\History\Binance_LTCUSDT_minute.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Testing\History\Binance_DASHUSDT_minute.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Testing\History\Binance_XMRUSDT_minute.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
