--- a/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
+++ b/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
@@ -36,10 +36,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Algorithms\Surfing\SurfingStateMachine.cs">
-        <DependentUpon>SurfingStateMachine.puml</DependentUpon>
+      <Compile Update="Algorithms\Surfing\StateMachine.cs">
+        <DependentUpon>StateMachine.puml</DependentUpon>
       </Compile>
-      <StatelessFile Include="Algorithms\Surfing\SurfingStateMachine.puml" />
+      <StatelessFile Include="Algorithms\Surfing\StateMachine.puml" />
     </ItemGroup>
 
 </Project>
