--- a/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
+++ b/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
@@ -40,6 +40,7 @@
       <Compile Update="Algorithms\Surfing\Sequence.cs">
         <DependentUpon>Sequence.puml</DependentUpon>
       </Compile>
+      <StatelessFile Include="Algorithms\Circular\CircularSequence.puml" />
       <StatelessFile Include="Algorithms\Surfing\Sequence.puml" />
       <Compile Update="Algorithms\Surfing\Sequence.FromOtherCoin.cs">
         <DependentUpon>Sequence.puml</DependentUpon>
