--- a/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
+++ b/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
@@ -24,6 +24,27 @@
     <Compile Update="Shared\MainLayout.cs">
       <DependentUpon>MainLayout.razor</DependentUpon>
     </Compile>
+    <Compile Update="Trading\Experimental\Experiments.cs">
+      <DependentUpon>Experiments.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Circular\CircularEdit.cs">
+      <DependentUpon>CircularEdit.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Circular\CircularView.cs">
+      <DependentUpon>CircularView.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Shared\Index.cs">
+      <DependentUpon>Index.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Configuration\Settings.cs">
+      <DependentUpon>Settings.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Simple\SimpleView.cs">
+      <DependentUpon>SimpleView.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Simple\SimpleEdit.cs">
+      <DependentUpon>SimpleEdit.razor</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -49,9 +70,4 @@
       <DependentUpon>NavMenu.razor</DependentUpon>
     </None>
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages" />
-  </ItemGroup>
-
 </Project>
