--- a/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
+++ b/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
@@ -45,6 +45,9 @@
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Charts" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Charts.Streaming" Version="0.9.3.6" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.3.6" />
+    <PackageReference Include="Blazorise.Animate" Version="0.9.3.6" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Sidebar" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Snackbar" Version="0.9.3.6" />
