Steps towards circular algorithm in web.

--- a/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
+++ b/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
@@ -70,4 +70,12 @@
       <DependentUpon>NavMenu.razor</DependentUpon>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Trading\Circular\Algorithm" />
+    <Folder Include="Trading\Experimental\Algorithm" />
+    <Folder Include="Trading\OneOff\Algorithm" />
+    <Folder Include="Trading\Simple\Algorithm" />
+    <Folder Include="Trading\Surfing\Algorithm" />
+  </ItemGroup>
 </Project>
