--- a/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
+++ b/EtAlii.BinanceMagic/EtAlii.BinanceMagic.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
@@ -46,7 +46,6 @@
       <Compile Update="Algorithms\Surfing\Sequence.cs">
         <DependentUpon>Sequence.puml</DependentUpon>
       </Compile>
-      <StatelessFile Include="Experiments\Circular\CircularSequence.puml" />
       <StatelessFile Include="Experiments\Surfing\Sequence.puml" />
       <Compile Update="Algorithms\Surfing\Sequence.FromOtherCoin.cs">
         <DependentUpon>Sequence.puml</DependentUpon>
@@ -63,13 +62,6 @@
       <Compile Update="Algorithms\Surfing\Sequence.FromUsdt.cs">
         <DependentUpon>Sequence.puml</DependentUpon>
       </Compile>
-      <Compile Update="Experiments\Circular\CircularSequence.cs">
-        <DependentUpon>CircularSequence.puml</DependentUpon>
-      </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Experiments\Configurable" />
     </ItemGroup>
 
 </Project>
