Small steps forward.

--- a/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
+++ b/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
@@ -84,6 +84,9 @@
     <Compile Update="Trading\Circular\CircularList.cs">
       <DependentUpon>CircularList.razor</DependentUpon>
     </Compile>
+    <Compile Update="Trading\IAlgorithmContext.cs">
+      <DependentUpon>AlgorithmContext.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
