--- a/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
+++ b/EtAlii.BinanceMagic.Service/EtAlii.BinanceMagic.Service.csproj
@@ -3,7 +3,42 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)\$(Configuration)\.etalii</CompilerGeneratedFilesOutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EtAlii.Generators.MicroMachine" Version="1.5.0-preview-0018" />
+    <PackageReference Include="Binance.Net" Version="7.1.1" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+    <PackageReference Include="Serilog.Enrichers.Memory" Version="1.0.4" />
+    <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="stateless" Version="5.11.0" />
+    <PackageReference Include="Trady.Analysis" Version="3.2.8" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
+
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Charts" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Charts.Streaming" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Animate" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.4.3" />
+    <PackageReference Include="Blazorise.Snackbar" Version="0.9.4.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.114.3" />
+    <ProjectReference Include="..\EtAlii.BinanceMagic\EtAlii.BinanceMagic.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
   <ItemGroup>
     <Content Update="appsettings.Development.json">
@@ -117,39 +152,15 @@
     <Compile Update="Trading\Circular\CircularView.Chart.cs">
       <DependentUpon>CircularView.razor</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="EtAlii.Generators.Stateless" Version="1.0.20" />
-    <PackageReference Include="Binance.Net" Version="7.0.4" />
-    <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
-    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
-    <PackageReference Include="Serilog.Enrichers.Memory" Version="1.0.4" />
-    <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
-    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="stateless" Version="5.11.0" />
-    <PackageReference Include="Trady.Analysis" Version="3.2.8" />
-    <PackageReference Include="System.Reactive" Version="5.0.0" />
-    
-    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Charts" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Charts.Streaming" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Components" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Animate" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.DataGrid" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Sidebar" Version="0.9.4.3" />
-    <PackageReference Include="Blazorise.Snackbar" Version="0.9.4.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.9" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.114.3" />
-    <ProjectReference Include="..\EtAlii.BinanceMagic\EtAlii.BinanceMagic.csproj" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <Compile Update="Trading\Edge\Algorithm\EdgeSequence.cs">
+      <DependentUpon>EdgeSequence.puml</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Edge\EdgeEdit.cs">
+      <DependentUpon>EdgeEdit.razor</DependentUpon>
+    </Compile>
+    <Compile Update="Trading\Edge\EdgeList.cs">
+      <DependentUpon>EdgeList.razor</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -167,6 +178,7 @@
 
   <ItemGroup>
     <Content Include="Trading\Circular\Algorithm\CircularSequence.puml" />
-    <StatelessFile Include="Trading\Surfing\Algorithm\Sequence.puml" />
+    <MicroMachine Include="Trading\Surfing\Algorithm\Sequence.puml" />
+    <MicroMachine Include="Trading\Edge\Algorithm\EdgeSequence.puml" />
   </ItemGroup>
 </Project>
