--- a/EtAlii.BinanceMagic.Service/Properties/launchSettings.json
+++ b/EtAlii.BinanceMagic.Service/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://+:58048",
+      "applicationUrl": "http://localhost:58048",
       "sslPort": 44387
     }
   },
@@ -19,7 +19,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://+:5001;http://+:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost+:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
