--- a/EtAlii.CryptoMagic.Service/EtAlii.CryptoMagic.Service.csproj
+++ b/EtAlii.CryptoMagic.Service/EtAlii.CryptoMagic.Service.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ProjectGuid>A298EC74-0496-450A-8AF3-308AF89830FC</ProjectGuid>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)\$(Configuration)\.etalii</CompilerGeneratedFilesOutputPath>
     <InvariantGlobalization>true</InvariantGlobalization>
