--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ on:
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true   # Stop wasting time caching packages
   DOTNET_CLI_TELEMETRY_OPTOUT: true         # Disable sending usage data to Microsoft
+  IMAGE_NAME: etalii-cryptomagic
 
 jobs:
   publish:
@@ -41,4 +42,27 @@ jobs:
         run: dotnet publish -c Release --no-build
 
       - name: Docker build
-        run: docker build -t vrenken/etalii-cryptomagic -f ./EtAlii.CryptoMagic/Dockerfile .
+        run: docker build -t $IMAGE_NAME -f ./EtAlii.CryptoMagic/Dockerfile .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker build
+        run: |
+          docker push $IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.VersionMajor }}
+          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.VersionMajor }}
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.MajorMinorVersion }}
+          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.MajorMinorVersion }}
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.SimpleVersion }}
+          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.SimpleVersion }}
+
+      - name: Docker build for main branch
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.SemVer2 }}
+          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.SemVer2 }}
+          
