--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
         run: dotnet publish -c Release --no-build
 
       - name: Docker build
-        run: docker build -t $IMAGE_NAME -f ./EtAlii.CryptoMagic/Dockerfile .
+        run: docker build -t ${{ env.IMAGE_NAME }} -f ./EtAlii.CryptoMagic/Dockerfile .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -52,17 +52,17 @@ jobs:
 
       - name: Docker build
         run: |
-          docker push $IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.VersionMajor }}
-          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.VersionMajor }}
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.MajorMinorVersion }}
-          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.MajorMinorVersion }}
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.SimpleVersion }}
-          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.SimpleVersion }}
+          docker push ${{ env.IMAGE_NAME }}:latest
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.VersionMajor }}
+          docker push ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.VersionMajor }}
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.MajorMinorVersion }}
+          docker push ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.MajorMinorVersion }}
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.SimpleVersion }}
+          docker push ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.SimpleVersion }}
 
       - name: Docker build for main branch
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ steps.nbgv.outputs.SemVer2 }}
-          docker push $IMAGE_NAME:${{ steps.nbgv.outputs.SemVer2 }}
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.SemVer2 }}
+          docker push ${{ env.IMAGE_NAME }}:${{ steps.nbgv.outputs.SemVer2 }}
           
