--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true   # Stop wasting time caching packages
   DOTNET_CLI_TELEMETRY_OPTOUT: true         # Disable sending usage data to Microsoft
-  IMAGE_NAME: etalii-cryptomagic
+  IMAGE_NAME: vrenken/etalii-cryptomagic
 
 jobs:
   publish:
