--- a/EtAlii.CryptoMagic/Properties/launchSettings.json
+++ b/EtAlii.CryptoMagic/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SERILOG_SERVER_URL": "http://seq.avalon:5341"
       }
     },
     "EtAlii.CryptoMagic": {
@@ -21,7 +22,8 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000;http://+:5000;https://+:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SERILOG_SERVER_URL": "http://seq.avalon:5341"
       }
     }
   }
