Tuned logging and database location for usage in a docker container.

--- a/EtAlii.CryptoMagic/Dockerfile
+++ b/EtAlii.CryptoMagic/Dockerfile
@@ -4,4 +4,6 @@ WORKDIR /CryptoMagic
 
 EXPOSE 5001
 VOLUME ["/cryptomagic/data"]
+ENV SERILOG_SERVER_URL=http://seq.avalon:5341
+
 ENTRYPOINT ["dotnet", "EtAlii.CryptoMagic.dll"]
